--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,4 +24,7 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-      - uses: stefanoeb/jest-action@1.0.4
+      - name: yarn install
+        run: yarn install
+      - name: test
+        run: yarn test
