--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  test:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -28,3 +28,9 @@ jobs:
         run: yarn install
       - name: test
         run: yarn test
+      - name: yarn install example_project
+        run: yarn install
+        working-directory: ./example_project/
+      - name: yarn test example_project
+        run: yarn test
+        working-directory: ./example_project/
