--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,4 +36,6 @@ jobs:
         working-directory: ./example_project/
       - name: JEST Report
         uses: RedaktionsNetzwerk-Deutschland/action-jest-reporter@v1.0.0
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           
