--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,5 +37,5 @@ jobs:
       - name: JEST Report
         uses: RedaktionsNetzwerk-Deutschland/action-jest-reporter@v1.0.0
         with:
-          github-token: ${{secrets.GITHUB_TOKEN}}
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
      
