--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tsinstaller",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "Extensible installer written in TypeScript",
   "scripts": {
     "build": "tsc",
@@ -25,6 +25,7 @@
     "@types/node": "^16.10.9",
     "@types/semver": "^7.3.8",
     "axios": "^0.23.0",
+    "check-disk-space": "^3.0.1",
     "cli-color": "^2.0.0",
     "cli-table": "^0.3.6",
     "esbuild": "^0.13.5",
