--- a/example_project/package.json
+++ b/example_project/package.json
@@ -4,9 +4,11 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "tsinstaller": "https://github.com/drorwolmer/tsinstaller#0.0.7"
+    "tsinstaller": "https://github.com/drorwolmer/tsinstaller#0.0.8"
   },
   "devDependencies": {
-    "@types/node": "^16.11.1"
+    "@types/jest": "^27.0.2",
+    "@types/node": "^16.11.1",
+    "jest": "^27.3.1"
   }
 }
