--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "esbuild": "^0.13.5",
     "jest": "^27.2.5",
     "log-symbols": "4.1.0",
+    "moment": "^2.29.1",
     "ora": "5.4.1",
     "pkg": "^5.3.3",
     "semver": "^7.3.5",
