--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tsinstaller",
-  "version": "0.0.20",
+  "version": "0.0.21",
   "description": "Extensible installer written in TypeScript",
   "scripts": {
     "build": "tsc",
@@ -29,6 +29,7 @@
     "cli-color": "^2.0.0",
     "cli-table": "^0.3.6",
     "esbuild": "^0.13.5",
+    "http-proxy-agent": "^5.0.0",
     "https-proxy-agent": "^5.0.0",
     "jest": "^27.2.5",
     "log-symbols": "4.1.0",
@@ -41,6 +42,7 @@
     "typescript": "^4.4.4"
   },
   "devDependencies": {
+    "@types/http-proxy-agent": "^4.0.1",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "prettier": "2.4.1"
