--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "tsinstaller",
-  "version": "0.0.24",
+  "version": "0.0.25",
   "description": "Extensible installer written in TypeScript",
   "scripts": {
     "build": "tsc",
-    "test": "jest",
+    "test": "jest -w1 --watchAll",
     "postinstall": "tsc"
   },
   "main": "dist/lib/index.js",
@@ -19,11 +19,6 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "@types/cli-color": "^2.0.1",
-    "@types/cli-table": "^0.3.0",
-    "@types/jest": "^27.0.2",
-    "@types/node": "^16.10.9",
-    "@types/semver": "^7.3.8",
     "axios": "^0.23.0",
     "check-disk-space": "^3.0.1",
     "cli-color": "^2.0.0",
@@ -32,17 +27,22 @@
     "esbuild": "^0.13.5",
     "http-proxy-agent": "^5.0.0",
     "https-proxy-agent": "^5.0.0",
-    "jest": "^27.2.5",
     "log-symbols": "4.1.0",
     "moment": "^2.29.1",
     "ora": "5.4.1",
     "pkg": "^5.3.3",
     "semver": "^7.3.5",
-    "ts-jest": "^27.0.5",
     "ts-node": "^10.3.0",
     "typescript": "^4.4.4"
   },
   "devDependencies": {
+    "ts-jest": "^27.0.5",
+    "jest": "^27.2.5",
+    "@types/cli-color": "^2.0.1",
+    "@types/cli-table": "^0.3.0",
+    "@types/jest": "^27.0.2",
+    "@types/node": "^16.10.9",
+    "@types/semver": "^7.3.8",
     "@types/http-proxy-agent": "^4.0.1",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
