--- a/example_project/package.json
+++ b/example_project/package.json
@@ -4,11 +4,16 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "tsinstaller": "https://github.com/drorwolmer/tsinstaller#0.0.25"
+    "tsinstaller": "https://github.com/drorwolmer/tsinstaller#0.0.26"
   },
   "devDependencies": {
     "@types/jest": "^27.0.2",
     "@types/node": "^16.11.1",
     "jest": "^27.3.1"
+  },
+  "pkg": {
+    "assets": [
+      "dist/.build.env"
+    ]
   }
 }
