--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tsinstaller",
-  "version": "0.0.26",
+  "version": "0.0.27",
   "description": "Extensible installer written in TypeScript",
   "scripts": {
     "build": "tsc",
@@ -33,9 +33,7 @@
     "pkg": "^5.3.3",
     "semver": "^7.3.5",
     "ts-node": "^10.3.0",
-    "typescript": "^4.4.4"
-  },
-  "devDependencies": {
+    "typescript": "^4.4.4",
     "ts-jest": "^27.0.5",
     "jest": "^27.2.5",
     "@types/cli-color": "^2.0.1",
@@ -47,5 +45,6 @@
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "prettier": "2.4.1"
-  }
+  },
+  "devDependencies": {}
 }
