--- a/package.json
+++ b/package.json
@@ -19,35 +19,40 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "@types/cli-color": "^2.0.1",
-    "@types/cli-table": "^0.3.0",
-    "@types/http-proxy-agent": "^4.0.1",
-    "@types/jest": "^27.0.2",
-    "@types/node": "^16.10.9",
-    "@types/semver": "^7.3.8",
-    "axios": "^0.23.0",
+    "axios": "^1.7.2",
     "check-disk-space": "^3.0.1",
     "cli-color": "^2.0.0",
     "cli-table": "^0.3.6",
-    "envfile": "^6.17.0",
-    "esbuild": "^0.13.5",
-    "eslint": "^8.0.1",
-    "eslint-config-prettier": "^8.3.0",
+    "envfile": "^7.1.0",
+    "esbuild": "^0.21.4",
+    "eslint": "^9.4.0",
+    "eslint-config-prettier": "^9.1.0",
     "http-proxy-agent": "^5.0.0",
     "https-proxy-agent": "^5.0.0",
-    "jest": "^27.2.5",
-    "log-symbols": "4.1.0",
+    "log-symbols": "6.0.0",
     "moment": "^2.29.1",
-    "ora": "5.4.1",
+    "ora": "8.0.1",
+    "ora-classic": "^5.4.2",
     "pkg": "^5.3.3",
-    "prettier": "2.4.1",
+    "prettier": "3.3.1",
     "semver": "^7.3.5",
-    "ts-jest": "^27.0.5",
     "ts-node": "^10.3.0",
-    "typescript": "^4.4.4"
+    "typescript": "^5.4.5"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.24.7",
+    "@babel/preset-typescript": "^7.24.7",
+    "@jest/globals": "^29.7.0",
     "@types/axios-mock-adapter": "^1.10.0",
-    "axios-mock-adapter": "^1.20.0"
+    "@types/cli-color": "^2.0.1",
+    "@types/cli-table": "^0.3.0",
+    "@types/http-proxy-agent": "^4.0.1",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.14.2",
+    "@types/semver": "^7.3.8",
+    "axios-mock-adapter": "^1.20.0",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.4"
   }
 }
